# flutterxel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
.github/workflows/: ci.yml  docs_manual_deploy.yml  native_artifacts.yml  publish_dry_run.yml  publish_pub_dev.yml  release_readiness.yml
docs/: README.md  mkdocs.yml  requirements.txt
docs/architecture/: 2026-02-25-flutterxel-ffi-mobile-architecture.md  native-core-sync-and-hotpath-notes.md
docs/plans/: 2026-02-25-workspace-bootstrap-implementation-plan.md  2026-02-26-audio-ffi-old-mml-implementation-plan.md  2026-02-27-docs-site-architecture-plan.md  2026-03-04-flutterxel-upstream-followups-and-agent-map-plan.md  2026-03-04-pixel-snap-verification-notes.md  2026-03-04-resource-image-sync-release-plan.md  2026-03-05-rust-core-flutter-optimization-plan.md
docs/scripts/: build_docs.sh  generate_api_docs.sh
docs/site/: contributing.md  index.md
docs/site/getting-started/: first-app.md  installation.md
docs/site/guides/: agent-map-with-flutterxel.md  audio.md  examples.md  game-loop-and-rendering.md  input.md  pixel-snap-asset-preprocessing.md  resources-and-persistence.md
docs/site/reference/: api.md  (+2 more)
examples/cosmic_survivor/: README.md  pubspec.yaml
examples/pixel_puzzle/: README.md  pubspec.yaml
examples/star_patrol/: README.md  pubspec.yaml
examples/void_runner/: README.md  pubspec.yaml
native/: README.md
native/flutterxel_core/: Cargo.toml
native/flutterxel_core/include/: flutterxel_core.h
native/flutterxel_core/src/: lib.rs
(+54 files in other folders)
